# mesh_network

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  esp_now_mesh_architecture.md  esp_now_ota_robustness.md  sdkconfig.defaults  sdkconfig.defaults.gateway  sdkconfig.defaults.worker
.claude/: settings.json
common_components/font5x7/: CMakeLists.txt  idf_component.yml
common_components/font5x7/include/: font5x7.h
common_components/mesh_proto/: CMakeLists.txt  idf_component.yml
common_components/mesh_proto/include/: mesh_proto.h
common_components/ota_responder/: CMakeLists.txt  idf_component.yml  ota_responder.c
common_components/ota_responder/include/: ota_responder.h
common_components/ota_sender/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  ota_sender.c
common_components/ota_sender/include/: ota_sender.h
main/: CMakeLists.txt  Kconfig.projbuild  gateway_main.c  idf_component.yml  worker_main.c
products/gateway/: CMakeLists.txt  CMakePresets.json  sdkconfig.defaults  sdkconfig.defaults.gateway
products/gateway/main/: CMakeLists.txt  gateway_main.c  idf_component.yml
products/worker/: CMakeLists.txt  CMakePresets.json  sdkconfig.defaults  sdkconfig.defaults.worker
products/worker/main/: CMakeLists.txt  idf_component.yml
